--- a/radtech1.1/contact.htm
+++ b/radtech1.1/contact.htm
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="navbar.css">
